Colaboratory kullanılarak oluşturuldu

--- a/patika_dev_Odev.ipynb
+++ b/patika_dev_Odev.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "patika_dev_Odev.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNW3hmYn59+zCFswBweGxnE",
+      "authorship_tag": "ABX9TyMBx3qLL5V9Mp+ZCDWfDlwQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/sadegerlih/patika.dev/blob/main/patika_dev_Odev.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/degerlisalih/patika.dev/blob/main/patika_dev_Odev.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -33,7 +33,8 @@
         "id": "4kO0LPYUcD69"
       },
       "source": [
-        "#soru1\n",
+        "#soru1 : iç içe bulunan çok boyutlu liste yapısını inedex sırasını bozmadan tek boyuta düşürünüz.\n",
+        "\n",
         "\n"
       ]
     },
@@ -45,7 +46,7 @@
       "source": [
         "input = [[1,'a',['cat'],2],[[[3]],'dog'],4,5]"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -63,7 +64,7 @@
         "      output.append(c)\n",
         "  return output"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -78,7 +79,7 @@
       "source": [
         "f(input)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -100,7 +101,7 @@
         "id": "-i9c8EFVmG38"
       },
       "source": [
-        "#soru2"
+        "#soru2 : iki boyutlu listeyi tesrten sıralayınız. iç listeler de kendi içinde küçükten büyüğe sıralanmalı"
       ]
     },
     {
@@ -111,7 +112,7 @@
       "source": [
         "input2= [[1, 2], [3, 4], [5, 6, 7]]"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -122,7 +123,7 @@
       "source": [
         "input2.reverse()"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -134,7 +135,7 @@
         "for i in input2:\n",
         "  i.reverse()"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -150,7 +151,7 @@
         "output2 = input2\n",
         "print(output2)"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
